--- a/simplest-webpack-inline-vendors/package.json
+++ b/simplest-webpack-inline-vendors/package.json
@@ -20,5 +20,8 @@
     "cypress": "^4.5.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
