--- a/simplest-webpack-vendor-bundle/package.json
+++ b/simplest-webpack-vendor-bundle/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack src/foo.js",
-    "build:spec": "webpack src/foo.spec.js",
+    "build": "webpack src/foo.js --optimize-min-chunk-size=0",
+    "build:spec": "webpack src/foo.spec.js --optimize-min-chunk-size=0",
     "test": "cypress open",
     "headless": "cypress run"
   },
@@ -20,5 +20,8 @@
     "cypress": "^4.5.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
